@@ -1,95 +1,160 @@
 package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.dto.BookingForItemDto;
+import ru.practicum.shareit.booking.mapper.BookingMapper;
+import ru.practicum.shareit.booking.repository.BookingRepository;
+import ru.practicum.shareit.comment.model.Comment;
+import ru.practicum.shareit.comment.dto.CommentDto;
+import ru.practicum.shareit.comment.dto.CommentShortDto;
+import ru.practicum.shareit.comment.mapper.CommentMapper;
+import ru.practicum.shareit.comment.repository.CommentRepository;
+import ru.practicum.shareit.enums.Status;
+import ru.practicum.shareit.exception.AccessException;
 import ru.practicum.shareit.exception.ObjectNotFoundException;
+import ru.practicum.shareit.item.dto.ItemShortDto;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.mapper.ItemMapper;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.ItemRepository;
+import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
-import static java.lang.String.format;
+import static org.springframework.data.domain.Sort.Direction.DESC;
 
 @Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
     private final ItemRepository itemRepository;
     private final UserRepository userRepository;
+    private final CommentRepository commentRepository;
+    private final CommentMapper commentMapper;
+    private final BookingRepository bookingRepository;
+    private final BookingMapper bookingMapper;
+    private final ItemMapper mapper;
 
+    @Transactional
     @Override
-    public ItemDto createItem(Long userId, ItemDto itemDto) {
-        if (userRepository.getById(userId) == null) {
-            throw new ObjectNotFoundException("Пользователь не найден");
-        }
-        Item item = ItemMapper.toItem(itemDto);
-        Item itemCreated = itemRepository.createItem(userId, item);
-        return ItemMapper.toItemDto(itemCreated);
+    public ItemDto create(Long userId, ItemShortDto item) {
+        User user = userRepository.findById(userId).orElseThrow(
+                () -> new ObjectNotFoundException("Пользователь не найден"));
+        Item thisItem = mapper.toItem(item);
+        thisItem.setOwner(user);
+        return mapper.toItemDto(itemRepository.save(thisItem));
     }
 
+    @Transactional
     @Override
-    public ItemDto updateItem(Long userId, Long itemId, ItemDto itemDto) {
-        if (userRepository.getById(userId) == null) {
-            throw new ObjectNotFoundException("Пользователь не найден");
-        }
-        if (itemRepository.getItemById(itemId) == null) {
-            throw new ObjectNotFoundException("Вещь не найдена");
-        }
-        if (!itemRepository.isUsersItem(userId, itemId)) {
+    public ItemDto update(Long userId, Long itemId, ItemShortDto item) {
+        Item thisItem = itemRepository.findById(itemId).orElseThrow(
+                () -> new ObjectNotFoundException("Товар не найден"));
+        if (!thisItem.getOwner().getId().equals(userId)) {
             throw new ObjectNotFoundException("Пользователь не является владельцем товара");
         }
-        Item item = ItemMapper.toItem(itemDto);
-        Item updateItem = itemRepository.getItemById(itemId);
-        if (item.getName() != null) {
-            updateItem.setName(item.getName());
+        if (item.getName() != null && !item.getName().isBlank()) {
+            thisItem.setName(item.getName());
         }
-        if (item.getDescription() != null) {
-            updateItem.setDescription(item.getDescription());
+        if (item.getDescription() != null && !item.getDescription().isBlank()) {
+            thisItem.setDescription(item.getDescription());
         }
         if (item.getAvailable() != null) {
-            updateItem.setAvailable(item.getAvailable());
+            thisItem.setAvailable(item.getAvailable());
         }
-        Item itemUpdated = itemRepository.updateItem(itemId, updateItem);
-        return ItemMapper.toItemDto(itemUpdated);
+        return mapper.toItemDto(thisItem);
     }
 
     @Override
-    public ItemDto getItemById(Long userId, Long id) {
-        if (userRepository.getById(userId) == null) {
-            throw new ObjectNotFoundException("Пользователь не найден");
+    public ItemDto getById(Long userId, Long itemId) {
+        Item thisItem = itemRepository.findById(itemId).orElseThrow(
+                () -> new ObjectNotFoundException("Товар не найден"));
+        List<ItemDto> itemDtoList = new ArrayList<>();
+        itemDtoList.add(mapper.toItemDto(thisItem));
+        if (thisItem.getOwner().getId().equals(userId)) {
+            List<Long> items = itemDtoList.stream().map(ItemDto::getId).collect(Collectors.toList());
+            getBookingsByItem(itemDtoList, items);
         }
-        if (!itemRepository.existById(id)) {
-            throw new ObjectNotFoundException(format("Вещь с идентификатором %d не найдена", id));
+        ItemDto item = itemDtoList.getFirst();
+        item.setComments(commentRepository.getAllByItemId(itemId).stream().map(commentMapper::toCommentDto)
+                .collect(Collectors.toList()));
+        return item;
+    }
+
+    @Transactional
+    @Override
+    public CommentDto createComment(Long itemId, Long userId, CommentShortDto comment) {
+        User user = userRepository.findById(userId).orElseThrow(
+                () -> new ObjectNotFoundException("Пользователь не найден"));
+        Item item = itemRepository.findById(itemId).orElseThrow(
+                () -> new ObjectNotFoundException("Товар не найден"));
+        if (bookingRepository.findAllByBookerIdAndItemIdAndStatusEqualsAndEndIsBefore(
+                userId, itemId, Status.APPROVED, LocalDateTime.now()).isEmpty()) {
+            throw new AccessException("Ошибка доступа");
         }
-        Item itemGet = itemRepository.getItemById(id);
-        return ItemMapper.toItemDto(itemGet);
+        Comment thisComment = commentMapper.toComment(comment);
+        thisComment.setItem(item);
+        thisComment.setAuthor(user);
+        thisComment.setCreated(LocalDateTime.now());
+        commentRepository.save(thisComment);
+        return commentMapper.toCommentDto(thisComment);
+    }
+
+    @Transactional
+    @Override
+    public void deleteById(Long userId, Long id) {
+        itemRepository.deleteById(id);
     }
 
     @Override
-    public void deleteItemById(Long userId, Long id) {
-        itemRepository.deleteItemById(id);
+    public List<ItemDto> getByUserId(Long id) {
+        List<Item> items = itemRepository.findItemByOwnerId(id);
+        List<ItemDto> itemDtoList = items.stream().map(mapper::toItemDto).collect(Collectors.toList());
+        List<Long> itemsIds = itemDtoList.stream().map(ItemDto::getId).collect(Collectors.toList());
+        getBookingsByItem(itemDtoList, itemsIds);
+        Map<Long, List<CommentDto>> comments = commentRepository
+                .getAllByItemIdIn(itemsIds, Sort.by(DESC, "created"))
+                .stream()
+                .map(commentMapper::toCommentDto)
+                .collect(Collectors.groupingBy(CommentDto::getId));
+        itemDtoList.forEach(i -> i.setComments(comments.get(i.getId())));
+        return itemDtoList;
     }
 
     @Override
-    public List<ItemDto> getItemsByUserId(Long id) {
-        List<Item> itemsByUserId = itemRepository.getItemsByUserId(id);
-        return itemsByUserId.stream()
-                .map(ItemMapper::toItemDto)
-                .toList();
-    }
-
-    @Override
-    public List<ItemDto> search(String text) {
+    public List<ItemShortDto> search(String text) {
+        Boolean available = true;
         if (text.isBlank()) {
             return new ArrayList<>();
-        } else {
-            List<Item> itemsSearched = itemRepository.search(text);
-            return itemsSearched.stream()
-                    .map(ItemMapper::toItemDto)
-                    .toList();
+        }
+        return itemRepository
+                .findByAvailableAndNameContainingIgnoreCaseOrDescriptionContainingIgnoreCase(available, text, text)
+                .stream().map(mapper::toItemShortDto).collect(Collectors.toList());
+    }
+
+    private void getBookingsByItem(List<ItemDto> itemDtoList, List<Long> items) {
+        Map<Long, BookingForItemDto> lastBookings = bookingRepository.findFirstByItemIdInAndStartLessThanEqualAndStatus(
+                        items, LocalDateTime.now(), Status.APPROVED, Sort.by(DESC, "start"))
+                .stream()
+                .map(bookingMapper::bookingForItemDto)
+                .collect(Collectors.toMap(BookingForItemDto::getItemId, Function.identity()));
+        Map<Long, BookingForItemDto> nextBookings = bookingRepository.findFirstByItemIdInAndStartAfterAndStatus(
+                        items, LocalDateTime.now(), Status.APPROVED, Sort.by(Sort.Direction.ASC, "start"))
+                .stream()
+                .map(bookingMapper::bookingForItemDto)
+                .collect(Collectors.toMap(BookingForItemDto::getItemId, Function.identity()));
+        for (ItemDto item: itemDtoList) {
+            item.setLastBooking(lastBookings.get(item.getId()));
+            item.setNextBooking(nextBookings.get(item.getId()));
         }
     }
 }
