@@ -2,64 +2,50 @@ package ru.practicum.shareit.user.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import ru.practicum.shareit.exception.ObjectAlreadyExistsException;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.exception.ObjectNotFoundException;
-import ru.practicum.shareit.exception.ValidationException;
-import ru.practicum.shareit.user.dto.UserDto;
 import ru.practicum.shareit.user.mapper.UserMapper;
 import ru.practicum.shareit.user.model.User;
+import ru.practicum.shareit.user.dto.UserDto;
 import ru.practicum.shareit.user.repository.UserRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
     private final UserRepository repository;
+    private final UserMapper mapper;
 
+    @Transactional
     @Override
-    public UserDto create(UserDto userDto) {
-        User user = UserMapper.toUser(userDto);
-        if (user.getEmail() == null) {
-            throw new ValidationException("У пользователя отсутствует адрес email");
-        }
-        if (repository.existByEmail(user.getEmail())) {
-            throw new ObjectAlreadyExistsException("Пользователь с таким email уже существует");
-        }
-        User userCreated = repository.create(user);
-        return UserMapper.toUserDto(userCreated);
+    public UserDto create(UserDto user) {
+        User thisUser = mapper.toUser(user);
+        return mapper.toUserDto(repository.save(thisUser));
     }
 
+    @Transactional
     @Override
-    public UserDto update(Long id, UserDto userDto) {
-        if (repository.getById(id) == null) {
-            throw new ObjectNotFoundException("Пользователь не найден");
+    public UserDto update(Long id, UserDto user) {
+        User thisUser = repository.findById(id).orElseThrow(() -> new ObjectNotFoundException("Пользователь не найден"));
+        if (user.getEmail() != null && !user.getEmail().isBlank()) {
+            thisUser.setEmail(user.getEmail());
         }
-        User user = UserMapper.toUser(userDto);
-        if (repository.existByEmail(user.getEmail())) {
-            throw new ObjectAlreadyExistsException("Пользователь с таким email уже существует");
+        if (user.getName() != null && !user.getName().isBlank()) {
+            thisUser.setName(user.getName());
         }
-        User updateUser = repository.getById(id);
-        if (user.getName() != null) {
-            updateUser.setName(user.getName());
-        }
-        if (user.getEmail() != null) {
-            updateUser.setEmail(user.getEmail());
-        }
-        User userUpdated = repository.update(id, updateUser);
-        return UserMapper.toUserDto(userUpdated);
+        return mapper.toUserDto(thisUser);
     }
 
     @Override
     public UserDto getById(Long id) {
-        if (!repository.existById(id)) {
-            throw new ObjectNotFoundException("Ошибка! Пользователь с идентификатором " + id + " отсутствует в " +
-                    "хранилище");
-        }
-        User userGet = repository.getById(id);
-        return UserMapper.toUserDto(userGet);
+        User user = repository.findById(id).orElseThrow(() -> new ObjectNotFoundException("Пользователь не найден"));
+        return mapper.toUserDto(user);
     }
 
+    @Transactional
     @Override
     public void deleteById(Long id) {
         repository.deleteById(id);
@@ -67,8 +53,6 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public List<UserDto> getUsers() {
-        return repository.getUsers().stream()
-                .map(UserMapper::toUserDto)
-                .toList();
+        return repository.findAll().stream().map(mapper::toUserDto).collect(Collectors.toList());
     }
 }
